[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/atlas1.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/spawnpoint.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 877.98

[node name="enemyspawnpoint" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="spawnpoint" type="Node2D" parent="."]
position = Vector2( 0, -64 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="PlayerDetectionRadius" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionRadius"]
shape = SubResource( 1 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PlayerDetectionRadius" to="." method="_on_PlayerDetectionRadius_body_entered"]
[connection signal="body_exited" from="PlayerDetectionRadius" to="." method="_on_PlayerDetectionRadius_body_exited"]
